// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FormPassword FormPassword should render with default props 1`] = `
<FormPassword
  classes={
    Object {
      "adornment": "withState-withHandlers-pure-FormPassword----adornment-1",
    }
  }
  handleClick={[Function]}
  handleMouseDown={[Function]}
  setVisibility={[Function]}
  visibility={false}
/>
`;

exports[`components/FormPassword Render should render as plain-text 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="dense"
>
  <WithStyles(InputLabel)
    required={false}
  />
  <WithStyles(Input)
    endAdornment={
      <WithStyles(InputAdornment)
        className="__ADORNMENT__"
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
          onMouseDown={[MockFunction]}
          tabIndex={-1}
        >
          <pure(VisibilityOff) />
        </WithStyles(IconButton)>
      </WithStyles(InputAdornment)>
    }
    readOnly={false}
    type="text"
  />
</WithStyles(FormControl)>
`;

exports[`components/FormPassword Render should render as read-only 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="dense"
>
  <WithStyles(InputLabel)
    required={false}
  />
  <WithStyles(Input)
    endAdornment={
      <WithStyles(InputAdornment)
        className="__ADORNMENT__"
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
          onMouseDown={[MockFunction]}
          tabIndex={-1}
        >
          <pure(Visibility) />
        </WithStyles(IconButton)>
      </WithStyles(InputAdornment)>
    }
    readOnly={true}
    type="password"
  />
</WithStyles(FormControl)>
`;

exports[`components/FormPassword Render should render with default props 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="dense"
>
  <WithStyles(InputLabel)
    required={false}
  />
  <WithStyles(Input)
    endAdornment={
      <WithStyles(InputAdornment)
        className="__ADORNMENT__"
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
          onMouseDown={[MockFunction]}
          tabIndex={-1}
        >
          <pure(Visibility) />
        </WithStyles(IconButton)>
      </WithStyles(InputAdornment)>
    }
    readOnly={false}
    type="password"
  />
</WithStyles(FormControl)>
`;

exports[`components/FormPassword Render should render with helper text 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="dense"
>
  <WithStyles(InputLabel)
    required={false}
  />
  <WithStyles(Input)
    endAdornment={
      <WithStyles(InputAdornment)
        className="__ADORNMENT__"
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
          onMouseDown={[MockFunction]}
          tabIndex={-1}
        >
          <pure(Visibility) />
        </WithStyles(IconButton)>
      </WithStyles(InputAdornment)>
    }
    readOnly={false}
    type="password"
  />
  <WithStyles(FormHelperText)>
    __HELPER_TEXT__
  </WithStyles(FormHelperText)>
</WithStyles(FormControl)>
`;
